--- a/tests/json.date-extensions-tests.html
+++ b/tests/json.date-extensions-tests.html
@@ -11,7 +11,7 @@
     <div id="qunit-fixture"></div>
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>    
     <script src="http://code.jquery.com/qunit/qunit-1.12.0.js"></script>   
-    <script src="../src/json.date-extensions.js"></script>
+    <script src="../dist/json.date-extensions.js"></script>
     <script src="date-extensions-tests.js"></script>
 </body>
 </html>
